--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Minae Lee",
   "license": "ISC",
+  "devDependencies": {
+    "lite-server": "^2.3.0"
+  },
   "dependencies": {
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.0.0",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
-  },
-  "devDependencies": {
-    "lite-server": "^2.5.4"
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9"
   }
 }
